feat: Add 'created_at' field to Message model and database table
chore: Update socket.io-client type definition to version 3.0.0

fix: Update chat component template to display correct sender name

chore: Update socket service to use 'host.docker.internal' for socket connection

chore: Update package-lock.json with socket.io-client type definition version 3.0.0

chore: Update getMessages method in MessagesController to filter messages by userId and recipientId

--- a/client/src/app/auth/chat/chat.component.html
+++ b/client/src/app/auth/chat/chat.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <div class="chat-messages mb-3" style="height: 300px; overflow-y: auto;">
             <div *ngFor="let message of messages" class="mb-2 pb-2">
-                <strong>{{ message.senderId === socketService.userId ? 'me' : userNames.get(+message.senderId) }}</strong>: {{ message.text }}
+                <strong>{{ socketService && socketService.userId !== null && +message.sender_id === +socketService.userId ? 'me' : userNames.get(+message.sender_id) }}</strong>: {{ message.message }}
               </div>
         </div>
         
